# finreg-ml

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: credit_scoring.py
finreg/: __init__.py  audit.py  compliance.py  drift.py  explain.py  fairness.py  model_card.py  pipeline.py  report.py  threshold.py  validators.py
tests/: test_drift.py  test_pipeline.py  test_report.py  test_threshold.py  test_validators.py
